# corgidrp

./: .env  .gitattributes  .gitignore  .project  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  bka-chain.pkl  build_trad_dark_full_1_2026-01-22T15.49.37.592_recipe.json  conftest.py  dispersion_results.npy  pyproject.toml  pytest.ini  requirements.txt  requirements_e2etests.txt  run_pipeline.py  setup.py  test.py  verify_headers.py
.externalToolBuilders/: corgi_builder.launch
.github/: pull_request_template.md
corgidrp/: #l4_to_tda.py#  #mocks.py#  .detector.py.swo  CheckFiles.py  L1_input_data_generation.py  L1_to_L2_proc.py  L2_to_L3_proc.py  L3_to_L4_proc.py  L4_to_TDA_proc.py  __init__.py  astrom.py  bad_pixel_calibration.py  caldb.py  calibrate_darks_lsq.py  calibrate_kgain.py  calibrate_nonlin.py  calsort.py  check.py  combine.py  corethroughput.py  darks.py  data.py  detector.py  detector_calibrations.py  find_source.py  flat.py  fluxcal.py  klip_fm.py  l1_to_l2a.py  l2a_to_l2b.py  l2b_to_l3.py  l3_to_l4.py  l4_to_tda.py  masterdark_from_noisemaps.py  mean_combine.py  measure_companions.py  memory_tracker.py  mocks.py  nd_filter_calibration.py  ops.py  (+13 more)
docs/: requirements.txt
examples/: ttr5_analog.py
pipeline_output/: HDU_STRUCTURE_SUMMARY.md  HEADER_TRACKING_SUMMARY.md  L2A_HEADER_VERIFICATION.txt
scripts/: convert_analog_to_photon_counting.py  excel_to_rst.py  extract_e2e_documentation.py  fix_ispc_headers.py
tests/: #test_calc_pol_p_and_pa_image.py#  #test_polarimetry.py#  :1  L4_TO_TDA_POLARIMETRY_TEST_PLAN.md  L4_TO_TDA_SPECTROSCOPY_TEST_PLAN.md  demo_test_flatcal.ipynb  old_test_distortion_correction.py  test_add_phot_noise.py  test_add_shot_noise_to_err.py  test_astrom.py  test_badpixel.py  test_badpixel_correction.py  test_badpixelmap.py  test_bit_depth.py  test_build_synthesized_dark.py  test_calc_pol_p_and_pa_image.py  test_calc_polarimetry_product.py  test_calc_polarimetry_product.py~  test_calc_stokes_unocculted.py  test_caldb.py  test_calibrate_darks_lsq.py  test_calsort.py  test_check.py  test_combine.py  test_compute_QphiUphi.py  test_contrast_curve.py  (+55 more)
(+378 files in other folders)
