[project]
name = "corgidrp"
authors = [{name = "Roman Coronagraph Instrument CPP"}]
description = "(Roman Space Telescope) CORonaGraph Instrument Data Reduction Pipeline"
readme = "README.md"
# license = { file = 'LICENSE' }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.10"
dependencies = [
    "numpy", 
    "scipy",
    "pandas",
    "astropy",
]

dynamic = ['version']

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "numpydoc",
]
test = [
    "pytest",
    "pytest-doctestplus",
    "flake8",
    "flake8-pyproject",
    "codecov",
    "pytest-cov",
]

[project.urls]
"Bug Tracker" = "https://github.com/roman-corgi/corgidrp/issues"
"Source Code" = "https://github.com/roman-corgi/corgidrp"

[build-system]
requires = [
    "setuptools>=60",
    "setuptools_scm>=8.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/corgidrp/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 130
exclude = [
    'docs',
    '.tox',
    '.eggs',
    'build',
    '*_version.py',
]

[tool.coverage.run]
omit = [
    "_version.py",
]
